feat: draft auth vkid
